--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,8 @@ add_subdirectory(mep)
 
 add_executable(example exempleCircle.cpp)
 
-target_link_libraries(example mep)
+target_link_libraries(example
+    PUBLIC
+    mep)
+
 
