--- a/mep/CMakeLists.txt
+++ b/mep/CMakeLists.txt
@@ -1,5 +1,4 @@
-# Создаем библиотеку
-add_library(mep mepClass.cpp)
 
-# Указываем заголовочные файлы (опционально, но рекомендуется)
-target_include_directories(mep PUBLIC .)
+add_library(mep INTERFACE)
+target_include_directories(mep INTERFACE .)
+
